// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.frontgate;

option go_package = "openpitrix.io/openpitrix/pkg/pb/metadata/frontgate;pbfrontgate";

import "metadata/types/types.proto";
import "metadata/types/etcd.proto";
import "metadata/types/confd.proto";
import "metadata/types/drone.proto";
import "metadata/types/frontgate.proto";
import "metadata/types/pilot.proto";
import "metadata/types/task.proto";

message Config {
	string id = 1;
	int32 listen_port = 2;

	string pilot_host = 3;
	int32 pilot_port = 4;

	metadata.types.FrontgateEndpoint node_list = 5;
	metadata.types.EtcdConfig etcd_config = 6;
	metadata.types.ConfdConfig confd_config = 7;
}

service FrontgateService {
	rpc GetPilotVersion (metadata.types.Empty) returns (metadata.types.Version);
	rpc GetFrontgateVersion (metadata.types.Empty) returns (metadata.types.Version);
	rpc GetDroneVersion (metadata.types.DroneEndpoint) returns (metadata.types.Version);

	rpc GetPilotConfig (metadata.types.Empty) returns (metadata.types.PilotConfig);

	rpc GetFrontgateConfig (metadata.types.Empty) returns (metadata.types.FrontgateConfig);
	rpc SetFrontgateConfig (metadata.types.FrontgateConfig) returns (metadata.types.Empty);
	rpc SetFrontgateNodeConfig (metadata.types.FrontgateConfig) returns (metadata.types.Empty);

	rpc GetDroneList (metadata.types.Empty) returns (metadata.types.DroneIdList);
	rpc GetDroneConfig (metadata.types.DroneEndpoint) returns (metadata.types.DroneConfig);
	rpc SetDroneConfig (metadata.types.SetDroneConfigRequest) returns (metadata.types.Empty);

	rpc GetConfdConfig (metadata.types.ConfdEndpoint) returns (metadata.types.ConfdConfig);

	rpc IsConfdRunning (metadata.types.ConfdEndpoint) returns (metadata.types.Bool);
	rpc StartConfd (metadata.types.ConfdEndpoint) returns (metadata.types.Empty);
	rpc StopConfd (metadata.types.ConfdEndpoint) returns (metadata.types.Empty);

	rpc RegisterMetadata (metadata.types.SubTask_RegisterMetadata) returns (metadata.types.Empty);
	rpc DeregisterMetadata (metadata.types.SubTask_DeregisterMetadata) returns (metadata.types.Empty);

	rpc RegisterMetadataMapping (metadata.types.SubTask_RegisterMetadata) returns (metadata.types.Empty);
	rpc DeregisterMetadataMapping (metadata.types.SubTask_DeregisterMetadata) returns (metadata.types.Empty);

	rpc RegisterCmd (metadata.types.SubTask_RegisterCmd) returns (metadata.types.Empty);
	rpc DeregisterCmd (metadata.types.SubTask_DeregisterCmd) returns (metadata.types.Empty);

	rpc ReportSubTaskStatus (metadata.types.SubTaskStatus) returns (metadata.types.Empty);

	rpc GetEtcdValuesByPrefix (metadata.types.String) returns (metadata.types.StringMap);
	rpc GetEtcdValues (metadata.types.StringList) returns (metadata.types.StringMap);
	rpc SetEtcdValues (metadata.types.StringMap) returns (metadata.types.Empty);

	rpc PingPilot (metadata.types.Empty) returns (metadata.types.Empty);
	rpc PingFrontgate (metadata.types.Empty) returns (metadata.types.Empty);
	rpc PingFrontgateNode (metadata.types.Empty) returns (metadata.types.Empty);
	rpc PingDrone (metadata.types.DroneEndpoint) returns (metadata.types.Empty);
	rpc PingMetadataBackend (metadata.types.Empty) returns (metadata.types.Empty);

	rpc RunCommand (metadata.types.RunCommandOnFrontgateRequest) returns (metadata.types.String);
	rpc RunCommandOnDrone (metadata.types.RunCommandOnDroneRequest) returns (metadata.types.String);

	rpc HeartBeat(metadata.types.Empty) returns (metadata.types.Empty);
}
